--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="dark">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,17 @@
   <title>TribleTunes - Artist, Lyrics Videos & Amazing Music Content</title>
 
   <!-- Primary SEO -->
-  <meta name="description" content="TribleTunes creates high-quality lyric videos, curated playlists, and daily music uploads. Lose yourself in emotional and aesthetic music visuals.">
-  <meta name="keywords" content="TribleTunes, lyric videos, music channel, aesthetic lyrics, chill music, emotional songs, youtube music">
+  <meta name="description"
+    content="TribleTunes creates high-quality lyric videos, curated playlists, and daily music uploads. Lose yourself in emotional and aesthetic music visuals.">
+  <meta name="keywords"
+    content="TribleTunes, lyric videos, music channel, aesthetic lyrics, chill music, emotional songs, youtube music">
   <meta name="author" content="TribleTunes">
   <link rel="canonical" href="https://tribletunes.com">
 
   <!-- Open Graph (Facebook / WhatsApp / Instagram) -->
   <meta property="og:title" content="TribleTunes - Aesthetic Lyrics & Daily Music Uploads">
-  <meta property="og:description" content="Discover lyrical visuals that touch your heart. Join the TribleTunes music community.">
+  <meta property="og:description"
+    content="Discover lyrical visuals that touch your heart. Join the TribleTunes music community.">
   <meta property="og:image" content="https://ik.imagekit.io/lbmgfujrk/preview.png">
   <meta property="og:url" content="https://tribletunes.com">
   <meta property="og:type" content="website">
@@ -29,8 +33,10 @@
   <link rel="icon" href="https://ik.imagekit.io/lbmgfujrk/favicon.png" type="image/png">
 
   <!-- Styles & Fonts -->
-  <link rel="stylesheet" href="assets/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/style.css?v=2">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@400;600;700&display=swap"
+    rel="stylesheet">
 
   <!-- Icons -->
   <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js" type="module"></script>
@@ -68,7 +74,7 @@
     <a href="/submission/"><ion-icon name="cloud-upload-outline"></ion-icon> Submission</a>
     <a href="/privacy/"><ion-icon name="shield-checkmark-outline"></ion-icon> Privacy Policy</a>
     <a href="/terms/"><ion-icon name="document-text-outline"></ion-icon> Terms of Service</a>
-      <a href="/dmca/"><ion-icon name="alert-circle-outline"></ion-icon> DMCA</a>
+    <a href="/dmca/"><ion-icon name="alert-circle-outline"></ion-icon> DMCA</a>
   </nav>
 
   <!-- ABOUT -->
@@ -76,9 +82,30 @@
     <h2 class="section-title">Lose yourself in</h2>
     <h3 class="section-subtitle">the Place of amazing music.</h3>
     <p class="section-text">
-TribleTunes is a space where music and imagination soar together. We create and share high-quality lyric videos, bringing your favorite songs to life with vibrant visuals. From daily releases to curated playlists, our goal is to lift every listener into a world of amazing melodies and unforgettable rhythms.
-🎵 TribleTunes: Lose yourself in the music! 🎵    </p>
-    <button class="cta-btn" onclick="window.open('https://www.youtube.com/@Tribletunes', '_blank')">Be The Part Of Community</button>
+      TribleTunes is a space where music and imagination soar together. We create and share high-quality lyric videos,
+      bringing your favorite songs to life with vibrant visuals. From daily releases to curated playlists, our goal is
+      to lift every listener into a world of amazing melodies and unforgettable rhythms.
+      🎵 TribleTunes: Lose yourself in the music! 🎵 </p>
+    <button class="cta-btn" onclick="window.open('https://www.youtube.com/@Tribletunes', '_blank')">Be The Part Of
+      Community</button>
+  </section>
+
+  <!-- STATS -->
+  <section id="stats">
+    <div class="stats-card-main">
+      <div class="stat-item">
+        <h3 class="stat-number" data-target="5000000">0</h3>
+        <p class="stat-label">TOTAL VIEWS</p>
+      </div>
+      <div class="stat-item">
+        <h3 class="stat-number" data-target="400">0</h3>
+        <p class="stat-label">LYRIC VIDEOS</p>
+      </div>
+      <div class="stat-item">
+        <h3 class="stat-number" data-target="2024">0</h3>
+        <p class="stat-label">FOUNDED</p>
+      </div>
+    </div>
   </section>
 
   <!-- RELEASES -->
@@ -100,55 +127,57 @@ TribleTunes is a space where music and imagination soar together. We create and 
 
   <!-- FAQ -->
   <section id="faq">
-  <h2 class="section-title">Have questions?</h2>
-  <h3 class="section-subtitle">We've got answers.</h3>
+    <h2 class="section-title">Have questions?</h2>
+    <h3 class="section-subtitle">We've got answers.</h3>
 
-  <div class="faq-item">
-    <button class="faq-question">
-      What is TribleTunes? <span class="arrow-icon">▼</span>
-    </button>
-    <div class="faq-answer">
-      TribleTunes is a music and lyric video channel focused on delivering emotional, aesthetic, and impactful music visuals.
+    <div class="faq-item">
+      <button class="faq-question">
+        What is TribleTunes? <span class="arrow-icon">▼</span>
+      </button>
+      <div class="faq-answer">
+        TribleTunes is a music and lyric video channel focused on delivering emotional, aesthetic, and impactful music
+        visuals.
+      </div>
     </div>
-  </div>
 
-  <div class="faq-item">
-    <button class="faq-question">
-      How often are new videos released? <span class="arrow-icon">▼</span>
-    </button>
-    <div class="faq-answer">
-      New lyric videos, playlists, and music features are uploaded daily.
+    <div class="faq-item">
+      <button class="faq-question">
+        How often are new videos released? <span class="arrow-icon">▼</span>
+      </button>
+      <div class="faq-answer">
+        New lyric videos, playlists, and music features are uploaded daily.
+      </div>
     </div>
-  </div>
 
-  <div class="faq-item">
-    <button class="faq-question">
-      Can I request a song? <span class="arrow-icon">▼</span>
-    </button>
-    <div class="faq-answer">
-      Yes! You can request songs through our <a href="/submission/">Submission Page</a> or contact form.
+    <div class="faq-item">
+      <button class="faq-question">
+        Can I request a song? <span class="arrow-icon">▼</span>
+      </button>
+      <div class="faq-answer">
+        Yes! You can request songs through our <a href="/submission/">Submission Page</a> or contact form.
+      </div>
     </div>
-  </div>
 
-  <div class="faq-item">
-    <button class="faq-question">
-      Are all videos official? <span class="arrow-icon">▼</span>
-    </button>
-    <div class="faq-answer">
-      We work with artists and copyright licensing to ensure our lyric videos are created respectfully and legitimately.
+    <div class="faq-item">
+      <button class="faq-question">
+        Are all videos official? <span class="arrow-icon">▼</span>
+      </button>
+      <div class="faq-answer">
+        We work with artists and copyright licensing to ensure our lyric videos are created respectfully and
+        legitimately.
+      </div>
     </div>
-  </div>
 
-  <div class="faq-item">
-    <button class="faq-question">
-      How can I support TribleTunes? <span class="arrow-icon">▼</span>
-    </button>
-    <div class="faq-answer">
-      Support us by subscribing, engaging with our uploads, requesting songs, and sharing our videos with friends.
+    <div class="faq-item">
+      <button class="faq-question">
+        How can I support TribleTunes? <span class="arrow-icon">▼</span>
+      </button>
+      <div class="faq-answer">
+        Support us by subscribing, engaging with our uploads, requesting songs, and sharing our videos with friends.
+      </div>
     </div>
-  </div>
 
-</section>
+  </section>
 
   <!-- NEWSLETTER -->
   <section id="newsletter">
@@ -162,21 +191,22 @@ TribleTunes is a space where music and imagination soar together. We create and 
   </section>
 
   <!-- FOOTER -->
-<footer>
-  <p>&copy; 2025 TribleTunes. All rights reserved.</p>
-  <p>
-    <a href="/">Home</a> |
-    <a href="/about/">About Us</a> |
-    <a href="/contact/">Contact</a> |
-    <a href="/submission/">Submission</a> |
-    <a href="/privacy/">Privacy Policy</a> |
-    <a href="/terms/">Terms of Service</a> |
-    <a href="/dmca/">DMCA</a> |
-    <a href="/cookies/">Cookie Policy</a>
-  </p>
+  <footer>
+    <p>&copy; 2026 TribleTunes. All rights reserved.</p>
+    <p>
+      <a href="/">Home</a> |
+      <a href="/about/">About Us</a> |
+      <a href="/contact/">Contact</a> |
+      <a href="/submission/">Submission</a> |
+      <a href="/privacy/">Privacy Policy</a> |
+      <a href="/terms/">Terms of Service</a> |
+      <a href="/dmca/">DMCA</a> |
+      <a href="/cookies/">Cookie Policy</a>
+    </p>
 
-  <button id="scrollTop"><ion-icon name="arrow-up-outline"></ion-icon></button>
+    <button id="scrollTop"><ion-icon name="arrow-up-outline"></ion-icon></button>
 
-  <script src="assets/script.js"></script>
+    <script src="assets/script.js?v=2"></script>
 </body>
+
 </html>
